[package]
name = "blackhat_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
colored = "2.0"
thiserror = "1.0" 
log = "0.4"         
env_logger = "0.10" 
syn_crabs = "0.2.0"
hyper = "1.4.1"
serde = "1.0.210"
derive = "1.0.0"
sha1 = "0.10.6"
cargo-outdated = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

[workspace]
members = ["sha1_cracker/main.rs", "generate_reports/src/lib.rs"]

