[package]
name = "cleanCleanCleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
log4rs = "1.0"
chrono = "0.4"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
parking_lot = "0.12.3"
derive = "1.0.0"
filetime = "0.2.25"
